--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -1,14 +1,16 @@
 // colors
-$primary: #1da1f2;
-$primary-hover: #77beaf;
-$background: #243447;
-$background-lighter: #394859;
-$background-darker: #141d26;
-$blue: #007bfc;
+$black: #3b434e;
 $white: white;
-$gray-light: #aab8c2;
+$gray-light: #ebebeb;
 $gray: #a4a4a4;
-$gray-dark: #657786;
+$gray-dark: #6c7077;
+$primary: #7351f5;
+$primary-hover: #6344df;
+$red: #fc836d;
+$red-light: #fea291;
+$red-dark: #de0000;
+$green: #007b48;
+$green-light: #c8f8e4;
 
 // fonts
-$font-family: 'Roboto', sans-serif;
+$font-family: 'Noto Sans', sans-serif;
