--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,17 +1,21 @@
 @use './scss/' as *;
 
-* {
+:root {
 	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+}
+
+*,
+::before,
+::after {
+	box-sizing: inherit;
 }
 
 html,
 body {
 	max-width: 100vw;
-	overflow-x: hidden;
+	margin: 0;
+	padding: 0;
 	font-family: $font-family;
-	background-color: $background;
 }
 
 a {
