--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -1,7 +1,11 @@
+@use '@/styles/scss' as *;
+
 .header {
 	display: flex;
 	flex-direction: row;
+	align-items: center;
 	justify-content: space-between;
 	margin: 10px 0;
 	padding: 5px;
+	border-bottom: 2px solid $primary;
 }
