--- a/src/layout/Sidebar/Sidebar.module.scss
+++ b/src/layout/Sidebar/Sidebar.module.scss
@@ -4,19 +4,28 @@
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
-	color: $primary;
+	padding: 5px;
 	font-family: $font-family;
 	border-right: 1px dotted $primary;
-
 	@include font(18, 25);
 
 	.item {
 		display: flex;
+		gap: 15px;
 		align-items: center;
-		gap: 10px;
+		color: $gray-dark;
 
 		svg {
-			fill: $primary;
+			fill: $gray-dark;
+		}
+
+		&.active,
+		&:hover {
+			color: $primary;
+
+			svg {
+				fill: $primary;
+			}
 		}
 	}
 }
