--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -5,7 +5,6 @@
 		[title-start] calc(50% - 100px)
 		[title-end middle] 1fr [end];
 	gap: 20px 0;
-	margin-bottom: 10px;
 	padding: 5px;
 
 	.image {
@@ -25,5 +24,13 @@
 	.button {
 		grid-column: start / middle;
 		width: 150px;
+	}
+}
+
+.reviews {
+	display: block;
+
+	&.hidden {
+		display: none;
 	}
 }
