--- a/src/layout/Layout.module.scss
+++ b/src/layout/Layout.module.scss
@@ -4,7 +4,7 @@
 	display: grid;
 	grid-template:
 		'. header header .' auto
-		'. sidebar body .' 1fr
+		'. sidebar body .' calc(100vh - 194px)
 		'footer footer footer footer' auto
 		/ auto 250px minmax(300px, 1200px) auto;
 	gap: 40px 30px;
@@ -30,9 +30,9 @@
 	&.opened {
 		grid-template:
 			'. header .' auto
-			'. body .' 1fr
+			'. body .' calc(100vh - 194px)
 			'footer footer footer' auto
-			/ auto minmax(320px, 1520px) auto;
+			/ auto minmax(550px, 1450px) auto;
 
 		.sidebar {
 			display: none;
