--- a/src/layout/Layout.module.scss
+++ b/src/layout/Layout.module.scss
@@ -8,7 +8,7 @@
 		'footer footer footer footer' auto
 		/ auto 250px minmax(300px, 1200px) auto;
 	gap: 40px 30px;
-	min-height: 100vh;
+	min-height: 100%;
 
 	.header {
 		grid-area: header;
@@ -20,22 +20,17 @@
 
 	.body {
 		grid-area: body;
-		outline: none;
 	}
 
 	.footer {
 		grid-area: footer;
 	}
 
-	&.opened {
+	&.closed {
 		grid-template:
 			'. header .' auto
 			'. body .' calc(100vh - 194px)
 			'footer footer footer' auto
 			/ auto minmax(550px, 1450px) auto;
-
-		.sidebar {
-			display: none;
-		}
 	}
 }
