--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,5 @@
 @use './scss/' as *;
+@import '~bootstrap/scss/bootstrap';
 
 :root {
 	box-sizing: border-box;
@@ -13,9 +14,9 @@
 html,
 body {
 	max-width: 100vw;
+	max-height: 100vh;
 	margin: 0;
 	padding: 0;
-	font-family: $font-family;
 }
 
 a {
