--- a/src/page-components/ProfilePage/ProfilePage.module.scss
+++ b/src/page-components/ProfilePage/ProfilePage.module.scss
@@ -74,7 +74,7 @@
 	}
 }
 
-@media (width <= 900px) and (width >= 765px) {
+@media (width < 900px) and (width > 765px) {
 	.wrapper {
 		display: flex;
 		flex-direction: column;
