--- a/src/page-components/ProfilePage/ProfilePage.module.scss
+++ b/src/page-components/ProfilePage/ProfilePage.module.scss
@@ -78,18 +78,23 @@
 
 @media (width < 900px) and (width > 765px) {
 	.wrapper {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		text-align: center;
+		.card {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+		}
 	}
 }
 
 @include for-size(miniPhone) {
 	.wrapper {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		text-align: center;
+		padding: 0 5px;
+		.card {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+		}
 	}
 }
